--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,3 +2,11 @@ form.signup,
 form.login {
   margin-top: 50px;
 }
+#map {
+  height: 100%;
+}
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
